--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">BmiCalculator</string>
-    <string name="et_weight">weight</string>
-    <string name="et_height">height</string>
+    <string name="et_weight">Enter Weight</string>
+    <string name="et_height">Enter Height</string>
+    <string name="button_name">Submit</string>
 </resources>
